minor changes to README

--- a/README.adoc
+++ b/README.adoc
@@ -497,7 +497,7 @@ So there are some additional features planed for future versions.
 
 === Getting titles from TheTVDB
 :hide-uri-scheme:
-The Movie Database (TheTVDB) https://thetvdb.com/ is a free Service which provides lots of informations about tv-shows.
+The Movie Database (link:https://thetvdb.com[TheTVDB]) is a free Service which provides lots of informations about tv-shows.
 Media centers like Plex getting there data (like posters, background images, descriptions, actors a.s.f.) from that website.
 
 Luckily for us, it also has an API. So we are capable to get this data too.
