--- a/README.adoc
+++ b/README.adoc
@@ -311,19 +311,19 @@ This could look something like this:
                 └── SORTED/
                     ├── The Show/
                     │   ├── Season 01/
-                    │   │   ├── The Show s01e01.mkv
-                    │   │   ├── The Show s01e02.mkv
-                    │   │   ├── The Show s01e03.mkv
+                    │   │   ├── The Show - s01e01.mkv
+                    │   │   ├── The Show - s01e02.mkv
+                    │   │   ├── The Show - s01e03.mkv
                     │   │   └── ...
                     │   └── Season 02/
-                    │       ├── The Show s02e01.mkv
-                    │       ├── The Show s02e02.mkv
-                    │       ├── The Show s02e03.mkv
+                    │       ├── The Show - s02e01.mkv
+                    │       ├── The Show - s02e02.mkv
+                    │       ├── The Show - s02e03.mkv
                     │       └── ...
                     └── Another Show/
                         └── Season 02/
-                            ├── Another s02e01.mkv
-                            ├── Another s02e02.mkv
+                            ├── Another Show - s02e01.mkv
+                            ├── Another Show - s02e02.mkv
                             └── ...
 ....
 
@@ -380,6 +380,41 @@ The default is German.
 TIP: Actually, there is no functionality to permanently set the language.
 So you have to use it every time you use Sortier.
 
+=== Show titles based on dates
+
+According to link:https://support.plex.tv/articles/naming-and-organizing-your-tv-show-files/#toc-1[this part] of the Plex support site, one can use dates in tv-show titles if needed.
+This is the case for remakes for example.
+Or maybe for shows like Star Trek.
+
+Those dates could be written with:
+
+- Dashes (2011-11-15)
+- Periods (2011.11.15)
+- Spaces (2011 11 15)
+
+To actually use these the right way in the titles, you need to use:
+
+----
+--date "<date>"
+----
+
+In which ``<date>`` gets substituted with the actual date.
+
+The outcome looks like this:
+
+----
+SORTED/
+    └── Show Title - 2011-09-01/
+        └── Season 01/
+            ├── Show Title - s01e01 - 2011-09-01.mkv
+            ├── Show Title - s01e02 - 2011-09-01.mkv
+            ├── Show Title - s01e03 - 2011-09-01.mkv
+            └── ...
+----
+
+IMPORTANT: You only can use this for the whole tv-show.
+Not for single seasons or episodes.
+
 == Flags
 
 Flags are a kind of options.
@@ -400,8 +435,7 @@ If you use the flag
 
 all source folders will get deleted after the video file was copied.
 
-[WARNING]
-Use this functionality with caution.
+WARNING: Use this functionality with caution.
 
 === Debug mode
 
